argo-k8s/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: argo.pksinha.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

  tls:
    - hosts:
        - argo.pksinha.co.uk
      secretName: argo-tls
